
Note that ``RB_ID=#`` correspond to associated messages in commits.

Next Version

Runtime Behavior Changes:

  * util-core: `c.t.util.Closable.sequence` now continues processing
    the `Closables` should any of their closes result in a failed `Future`
    and will return the first failure. Synchronous exceptions are now
    handled by lifting them into failed `Futures`. ``PHAB_ID=D62418``

API Changes:

  * util-core: ByteWriter has been transformed into a true trait which can now
    be implemented outside of the com.twitter.io package. ``PHAB_ID=D59996``

  * util-core: The method ByteWriter.owned() has been moved to a sub trait,
    BufByteWriter, to separate the notion of the target buffer representation from the
    writer methods in order to make it easier to target different buffer representations.
    ``PHAB_ID=D61215``

  * util-stats: ``PHAB_ID=D59762``

   - `ProxyStatsReceiver.self` is now protected (was public before).
   - `StatsReceiver.repr` is now `def` (was `val` before).

Deprecations:

  * util-stats: ``PHAB_ID=D62611``

    - `StatsReceiver.counter0` is deprecated in favour of vararg `StatsReceiver.counter`
    - `StatsReceiver.stat0` is deprecated in favour of vararg `StatsReceiver.stat`


6.45.0  2017-06-06

New Features:

  * util-app: Optional resource shutdown sequencing for registered closables
    via `c.t.app.App#closeOnExitLast`. See longer note there for usage.
    ``RB_ID=916120``

  * util-core: Added `writeBytes(Buf)` to the ByteWriter abstract class to allow
    for efficient writing of the `c.t.io.Buf` type. ``RB_ID=917094``

  * util-core: Added `writeString(CharSequence, Charset)` and readString(Int, Charset)`
    to ByteWriter and ByteReader respectively to facilitate for more efficient String
    encoding and decoding. ``PHAB_ID=D63987``

  * util-core: Added `ByteReader.readUnsignedLongBE` and `ByteReader.readUnsignedLongLE`.
    ``RB_ID=917289``

API Changes:
